TOM-211 Fix breakpoint too small user profiles

--- a/assets/sass/components/pages/personnalProfile.sass
+++ b/assets/sass/components/pages/personnalProfile.sass
@@ -22,7 +22,7 @@
         padding-top: $spacer-m
         overflow: hidden
 
-    @media (max-width: $breakpoint-m)
+    @media (max-width: $breakpoint-l)
         grid-template-columns: 1fr
 
         h1
