--- a/assets/sass/components/pages/userProfile.sass
+++ b/assets/sass/components/pages/userProfile.sass
@@ -18,7 +18,7 @@
         padding: 0
         padding-top: $spacer-l
 
-    @media (max-width: $breakpoint-m)
+    @media (max-width: $breakpoint-l)
         grid-template-columns: 1fr
 
         &__user
